@@ -6,12 +6,12 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import jakarta.annotation.PostConstruct;
@@ -19,7 +19,7 @@ import jakarta.annotation.PostConstruct;
 /**
  * 분석 정책 로더 — @PostConstruct 1회 로딩, 이후 "serverId:logId" 키로 O(1) 조회
  *
- * 파일 위치: {user.home}/cfg/PreCheck_AnalyzePolicy.conf
+ * 파일 위치: precheck.analyze.policy-file-path (yml 미설정 시 {user.home}/cfg/PreCheck_AnalyzePolicy.conf)
  * 파일이 없으면 빈 맵으로 초기화(에러 아님). 파일은 서버 재시작 전까지 재로딩 없음.
  */
 @Component
@@ -27,11 +27,20 @@ public class PolicyLoader {
 
     private static final Logger log = LogManager.getLogger(PolicyLoader.class);
 
+    private static final String DEFAULT_POLICY_FILE_RELATIVE_PATH = "/cfg/PreCheck_AnalyzePolicy.conf";
+
     private final AnalyzePolicyParser analyzePolicyParser;
+    private final String policyFilePath;
     private Map<String, AnalyzePolicy> policyMap = new HashMap<>();
 
-    public PolicyLoader(AnalyzePolicyParser analyzePolicyParser) {
+    public PolicyLoader(
+            AnalyzePolicyParser analyzePolicyParser,
+            @Value("${precheck.analyze.policy-file-path:}") String policyFilePath
+    ) {
         this.analyzePolicyParser = analyzePolicyParser;
+        this.policyFilePath = (policyFilePath == null || policyFilePath.isBlank())
+                ? System.getProperty("user.home") + DEFAULT_POLICY_FILE_RELATIVE_PATH
+                : policyFilePath;
     }
 
     @PostConstruct
@@ -88,7 +97,7 @@ public class PolicyLoader {
     }
 
     private Path resolvePolicyPath() {
-        return Paths.get(System.getProperty("user.home"), "cfg", "PreCheck_AnalyzePolicy.conf");
+        return Path.of(policyFilePath);
     }
 
     private String buildPolicyKey(String serverId, String logId) {
